navbar fix
removed arrows, added extra space

--- a/Responsive Web Design Tests/Technical Documentation Page/style.css
+++ b/Responsive Web Design Tests/Technical Documentation Page/style.css
@@ -132,26 +132,6 @@ h3{
     font-weight: 500; 
 }
 
-#arrow-down{
-    display: none;
-    width: 0;
-    height: 0;
-    margin-right: 10px;
-    border-left: 10px solid rgba(0, 0, 0, 0);
-    border-right: 10px solid rgba(0, 0, 0, 0);
-    border-top: 10px solid #ff9100;
-}
-
-#arrow-up{
-    display: none;
-    width: 0;
-    height: 0;
-    margin-right: 10px;
-    border-left: 10px solid rgba(0, 0, 0, 0);
-    border-right: 10px solid rgba(0, 0, 0, 0);
-    border-bottom: 10px solid #ff9100;
-}
-
 #main-doc{
     margin-left: 400px;
     padding: 40px 8%;
@@ -230,7 +210,7 @@ h3{
 @media (max-width: 700px){
     
     :root{
-        --navbarheight: 220px;
+        --navbarheight: 250px;
         scroll-padding-top: calc(var(--navbarheight) + 20px);
     }
 
@@ -246,16 +226,8 @@ h3{
     }
 
     #navbar ul{
-        height: 120px;
+        height: 150px;
         overflow-y: auto;
-    }
-
-    #arrow-down{
-        display: inline;
-    }
-
-    #arrow-up{
-        display: inline;
     }
 
     #main-doc{
@@ -269,13 +241,5 @@ h3{
     #navbar ul{
         height: calc(100% - 152px);
         overflow-y: auto;
-    }
-
-    #arrow-down{
-        display: inline;
-    }
-
-    #arrow-up{
-        display: inline;
     }
 }
